--- a/AngelAssignment4/AngelAssignment4.vcxproj
+++ b/AngelAssignment4/AngelAssignment4.vcxproj
@@ -136,6 +136,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="PointLight.cpp" />
     <ClCompile Include="SpotLight.cpp" />
+    <ClCompile Include="TerrainMesh.cpp" />
     <ClCompile Include="Texture.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -144,8 +145,10 @@
     <ClInclude Include="DirectionalLight.h" />
     <ClInclude Include="Light.h" />
     <ClInclude Include="Mesh.h" />
+    <ClInclude Include="PerlinNoise.h" />
     <ClInclude Include="PointLight.h" />
     <ClInclude Include="SpotLight.h" />
+    <ClInclude Include="TerrainMesh.h" />
     <ClInclude Include="Texture.h" />
   </ItemGroup>
   <ItemGroup>
