--- a/AngelAssignment4/AngelAssignment4.vcxproj.filters
+++ b/AngelAssignment4/AngelAssignment4.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClCompile Include="TerrainMesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Interactables.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Include\Angel_commons\Angel.h">
@@ -75,6 +78,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TerrainMesh.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Interactables.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
