--- a/AngelAssignment4/AngelAssignment4.vcxproj.filters
+++ b/AngelAssignment4/AngelAssignment4.vcxproj.filters
@@ -83,6 +83,9 @@
     <ClInclude Include="Interactables.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="vshader.glsl">
